# docs/swagger.json
@@ -101,7 +101,7 @@
         },
         "/api/v1/person/get": {
             "get": {
-                "description": "Возвращает отфильтрованные данные о людях\nОператоры для фильтрации значений:\n- `is:X` — значение равно X\n- `isnt:X` — значение не равно X\n- `ls:X` — значение меньше X (только для age)\n- `mt:X` — значение больше X (только для age)\n- Пример:\n- `age=mt:X` — значение больше X\n- `name=is:X` — значение равно X",
+                "description": "Возвращает отфильтрованные данные о людях\nОператоры для фильтрации значений (не распространяется на limit и offset):\n- `var=is:X` — значение равно X\n- `var=isnt:X` — значение не равно X\n- `var=ls:X` — значение меньше X (только для age)\n- `var=mt:X` — значение больше X (только для age)\n- Пример:\n- `age=mt:X` — значение больше X\n- `name=is:X` — значение равно X",
                 "produces": [
                     "application/json"
                 ],
@@ -148,7 +148,7 @@
                     },
                     {
                         "type": "integer",
-                        "description": "Лимит записей (по умолчанию 10)",
+                        "description": "Лимит записей (если не задан - выводятся все подходящие данные)",
                         "name": "limit",
                         "in": "query"
                     },
@@ -275,6 +275,10 @@
     "definitions": {
         "dto.CreatePerson": {
             "type": "object",
+            "required": [
+                "name",
+                "surname"
+            ],
             "properties": {
                 "name": {
                     "type": "string"
